--- a/pixel-wall-frontend/src/App.css
+++ b/pixel-wall-frontend/src/App.css
@@ -1,42 +1,39 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+body {
+  background: #13151a;
+  margin: 0;
+  color: #cad6d6;
+}
+
+h1 {
+  font-family: 'Rubik Wet Paint', cursive;
+  font-style: normal;
   text-align: center;
+  margin-bottom: 1rem;
+  color: #2db87e;
+  letter-spacing: 2px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+label {
+  font-size: 1.1rem;
+  margin-bottom: 1rem;
+  display: inline-block;
+  color: #dfe6e7;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input[type="color"] {
+  margin-left: 0.5rem;
+  border: none;
+  width: 2rem;
+  height: 2rem;
+  vertical-align: middle;
+  cursor: pointer;
+  background: none;
+  border-radius: 50%;
+  box-shadow: 0 0 4px #0008;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.pixel:hover, .pixel:focus {
+  border: 2px solid #ebe2e2;
+  box-shadow: 0 0 8px 2px #f3f3f355;
+  outline: none;
 }
